# TaxBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  evaluation-gate.yml  nightly-delta.yml  terraform.yml
frontend/: .env.example  README.md  index.html  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatView.tsx  CitationChip.tsx  CitationMarkdown.tsx  InputBar.tsx  MessageBubble.tsx  Sidebar.tsx  SourceDrawer.tsx  SourcesPanel.tsx  ThemeToggle.tsx  ThinkingIndicator.tsx  WelcomeHero.tsx
frontend/src/hooks/: useChats.ts  useComposerDock.ts
frontend/src/lib/: api.ts  citations.ts  sources.ts  storage.ts  types.ts
frontend/src/theme/: ThemeProvider.tsx  context.ts
infra/bootstrap/: main.tf  outputs.tf  variables.tf
infra/scripts/: sync-secrets.sh
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: build_reranker_dataset.py  qa_pairs_intermediate.json  reranker_training_data.json
scripts/finetuned_model/: README.md  adapter_config.json
src/api/: __init__.py  main.py  static.py
src/core/: __init__.py  config.py  conversation.py  db.py  errors.py  generation.py  logging_config.py  migrate.py  models.py  query_router.py  rate_limit.py  repository.py  reranker.py  retrieval.py  security.py  vector_store.py
src/core/migrations/: 001_init_taxbot.sql  002_ip_daily_rate_limits.sql
src/evaluation/: __init__.py  validate.py
src/ingestion/: __init__.py  backfill.py  delta_update.py  embeddings.py  filters.py  irs_scraper.py  narrative_filters.py  pdf_fetcher.py  sparse_encoder.py  summarizer.py  table_filters.py  table_pipeline.py  text_splitter.py  unstructured_parser.py
tests/: conftest.py
tests/fixtures/: ragas_tax_cases.json
tests/unit/: test_conversation.py  test_evaluation_loader.py  test_filters.py  test_html_table.py  test_irs_scraper.py  test_migrate.py  test_models.py  test_narrative_filters.py  test_rate_limit.py  test_retrieval.py  test_retrieval_filters.py  test_security.py  test_static.py  test_summarizer.py  test_table_filters.py  test_text_splitter.py  test_vector_store.py
