[tool.poetry]
name = "taxbot"
version = "0.1.0"
description = "Deterministic, zero-hallucination Retrieval-Augmented Generation pipeline for US IRS tax documents."
authors = ["TaxBot Maintainers <maintainers@taxbot.local>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "ingestion", from = "src" },
    { include = "core", from = "src" },
    { include = "evaluation", from = "src" },
    { include = "api", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Document parsing
unstructured-client = "^0.28.0"

# Postgres
asyncpg = "^0.30.0"

# Vector search
qdrant-client = ">=1.12"
fastembed = ">=0.4"

# HTTP and parsing
httpx = "^0.28.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pypdf = "^5.1.0"

# Models / validation
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"

# Generation
google-genai = "^1.4.0"

# Evaluation
ragas = "^0.2.6"
datasets = "^3.1.0"
langchain-google-genai = "^2.0.6"
langchain-community = "<0.4.2"

# Operational hygiene
tenacity = "^9.0.0"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
tqdm = "^4.67.0"
orjson = "^3.10.11"

# API surface 
fastapi = "^0.115.5"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
langchain-huggingface = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
ruff = "^0.8.0"
types-beautifulsoup4 = "^4.12.0.20240907"
respx = "^0.21.1"

[tool.poetry.scripts]
taxbot-backfill = "ingestion.backfill:main"
taxbot-delta = "ingestion.delta_update:main"
taxbot-evaluate = "evaluation.validate:main"
taxbot-migrate = "core.migrate:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ingestion", "core", "evaluation", "api"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "asyncpg",
    "ragas.*",
    "datasets.*",
    "unstructured_client.*",
    "fastembed.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
